--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     "@typescript-eslint/semi": [
       "error",
       "always"
-    ]
+    ],
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/prefer-readonly": "off"
   }
 }
