--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
       "always"
     ],
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/prefer-readonly": "off"
+    "@typescript-eslint/prefer-readonly": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/prefer-nullish-coalescing": "off"
   }
 }
