--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@decorators/di": "^1.0.3",
     "@decorators/express": "^2.6.0",
+    "@prisma/client": "^4.3.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -39,9 +40,13 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.19",
+    "prisma": "^4.3.1",
     "sucrase": "^3.25.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "vitest": "^0.23.1"
+  },
+  "prisma": {
+    "schema": "src/model/prisma/schema.prisma"
   }
 }
