--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "no-console": "warn",
     "no-useless-constructor": "off",
     "semi": [
       "error",
