--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "generate-password": "^1.7.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "node-color-log": "^10.0.2",
     "nodemailer": "^6.7.8"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "vitest": "^0.23.1"
   },
   "prisma": {
-    "schema": "src/model/prisma/schema.prisma"
+    "schema": "src/model/prisma/schema.prisma",
+    "seed": "ts-node src/model/prisma/seeds/seed.ts"
   }
 }
