--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "sucrase": "^3.25.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
-    "vitest": "^0.23.1"
+    "vitest": "^0.23.1",
+    "vitest-mock-extended": "^0.1.15"
   },
   "prisma": {
     "schema": "src/model/prisma/schema.prisma",
